Change fetch method from POST to GET

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
             try {
                 const response = await fetch(WEBHOOK_GET_HISTORY, { 
-                    method: 'POST',
+                    method: 'GET',
                     headers: { 
                         'Content-Type': 'application/json',
                         'X-N8N-0525-KEY': 'wirPid-qIkmyg-2powwa' // Added API Key
